src/Slider.scss
// move these into component?

$slideBgColor: #ffffff4d;
$slideBallColor: #ebebeb;
$slideBallIconColor: rgb(9, 31, 59);
$slideTextColor: #3a3d55;
$successColor: #053505;
$errorColor: #801111;

@mixin center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.slider-container {
    position: relative;
    margin: 20px;
    background-color: #ffffff4d;
    width: 80%;
    height: 80px;
    border-radius: 40px;
    @include center;
}

.slider {
    position: absolute;
    // left: -10px; // defined in component, so the value can be used in functions
    background-color: $slideBallColor;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    cursor: pointer;
    @include center;
    &.unlocked {
        width: 100%;
        height: inherit;
        border-radius: inherit;
    }
}

.icon {
    color: $slideBallIconColor;
    user-select: none;
    &.loading {
        height: 60%;
        animation: spin 1s infinite linear;
    }
    &.success {
        color: $successColor;
    }
    &.error {
        color: $errorColor;
    }
}

@keyframes spin {
    from {
        transform: rotate(0);
    }
    to {
        transform: rotate(360deg);
    }
}

.text {
    color: $slideTextColor;
    font-size: 24px;
    text-transform: uppercase;
    user-select: none;
    &.success {
        color: $successColor;
    }
    &.error {
        color: $errorColor;
    }
}

